# deb-python-positional

./: .coveragerc  .gitignore  .gitreview  .testr.conf  .travis.yml  LICENSE  README.md  README.rst  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
debian/: changelog  control  copyright  python-positional-doc.doc-base  rules  watch
debian/patches/: no-intersphinx.patch  remove-privacy-breach-in-docs.patch  series
doc/: Makefile
doc/source/: conf.py  index.rst
doc/source/api/: modules.rst  positional.rst
positional/: __init__.py
positional/tests/: test_positional.py
