[metadata]
name = positional
summary = Library to enforce positional or key-word arguments
description-file =
    README.rst
author = Morgan Fainberg
author-email = morgan.fainberg@gmail.com
home-page = https://github.com/morganfainberg/positional
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    positional

[pbr]
warnerrors = True
autodoc_tree_index_modules = True
autodoc_tree_excludes =
  setup.py
  positional/tests/

[wheel]
universal = 1
