[metadata]
name = positional
summary = Library to enforce positional or key-word arguments
description-file =
    README.rst
author = Morgan Fainberg
author-email = morgan.fainberg@gmail.com
home-page = https://github.com/morganfainberg/positional
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Development Status :: 5 - Production/Stable
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    positional

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[pbr]
warnerrors = True
autodoc_tree_index_modules = True
autodoc_tree_excludes =
  setup.py
  positional/tests/

[wheel]
universal = 1
